[GTK] Reimplement atk_text_get_text_*_offset for CHAR boundary https://bugs.webkit.org/show_bug.cgi?id=114870

Reviewed by Martin Robinson.

Re-implement this functions without using GailTextUtil nor Pango.

* accessibility/atk/WebKitAccessibleInterfaceText.cpp:
(webkitAccessibleTextGetChar): New function.
(webkitAccessibleTextGetTextForOffset): Call the new function for CHAR.

Canonical link: https://commits.webkit.org/134919@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150518 268f45cc-cd09-0410-ab3c-d52691b4dbfc